# Traffic-Density-Analyzer

./: .env.example  .gitignore  LICENSE  README.md  init_db.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py  utils.py
instance/: traffic_density.db
static/css/: result.css  style.css
static/js/: script.js
templates/: base.html  history.html  index.html  result.html
